--- a/config/twitter_auth.yml.example
+++ b/config/twitter_auth.yml.example
@@ -1,7 +1,7 @@
 development:
   strategy: oauth
-  oauth_consumer_key: devkey
-  oauth_consumer_secret: devsecret
+  oauth_consumer_key: xi2AU9fq3AL8a8IFgaZYqQ
+  oauth_consumer_secret: dVK8UiQ18hC1Zle59KKBnQOe7hZ5xpwNBGMVbfuCmZ0
   base_url: "https://twitter.com"
   api_timeout: 10
   remember_for: 14 # days
